# NY_Taxi_Web_Service

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  data.dvc  latest_performance.md  pyproject.toml  report.md  report.txt  run_commands.py  setup.py  test_environment.py  training_job.py
.dvc/: config
.github/workflows/: dev.yml  main.yml
config/: data.yaml  model.yaml
deployment/: Dockerfile  deploy-report.md  deploy.py  inference.py  predict.py  test.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  make_dataset.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  make_dataset.html  modules.html  objects.inv  search.html  searchindex.js
notebooks/: 0.1-neptune-experiment-tracking.ipynb  starter.db
src/data/: make_dataset.py
src/models/: train_model.py
src/utils/: utils.py
tests/: test_make_dataset.py  test_train_model.py  test_utils.py
