[tool.poetry]
name = "ny-taxi-web-service"
version = "0.1.0"
description = "Train and evaluate machine learning models on the NY taxi dataset - model to be deployed as a web service using an AWS SageMaker Endpoint"
authors = ["HichamBenbriqa <hichambenbriqa@gmail.com>"]
readme = "README.md"
packages = [{include = "ny_taxi_web_service"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "1.2.2"
python-dotenv = "1.0.0"
awscli = "^1.26.78"
boto3 = "^1.26.78"
pandas = "^2.1.2"
numpy = "^1.26.1"
pyarrow = "^14.0.0"
fastparquet = "^2023.10.1"
hydra-core = "^1.3.2"
neptune = "*"
dvc = "*"
dvc-s3 = "^2.23.0"
black = "^23.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
deepdiff = "^6.6.1"
requests = "^2.31.0"
hydra-core = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 150
target-version = ['py310']
skip-string-normalization = true
experimental-string-processing = true

[tool.isort]
multi_line_output = 3
length_sort = true
